Refactor Dockerfile for improved clarity and caching efficiency

--- a/DocuTrack_frontend/Dockerfile
+++ b/DocuTrack_frontend/Dockerfile
@@ -1,20 +1,21 @@
-# Dockerfile para DocuTrack Frontend (React + Vite)
+# Dockerfile - DocuTrack Frontend (React + Vite)
 FROM node:20-alpine AS build
-
 WORKDIR /app
 
+# Mejor cache de dependencias
 COPY package.json package-lock.json* ./
-RUN npm install
+RUN npm ci || npm install
 
+# Build de la app
 COPY . .
 RUN npm run build
 
-# Servir con un servidor web estático
+# --- Etapa de runtime (Nginx) ---
 FROM nginx:alpine
+# Config Nginx: SPA fallback (+ proxy opcional a /api)
+COPY nginx.conf /etc/nginx/nginx.conf
+# Archivos estáticos
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copia configuración personalizada de nginx si existe
-# COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
