--- a/DocuTrack_frontend/Dockerfile
+++ b/DocuTrack_frontend/Dockerfile
@@ -1,12 +1,8 @@
-# Dockerfile para producción: build de React y servir con Nginx
-FROM node:20-alpine AS build
+# Dockerfile para desarrollo: ejecuta React (Vite) en modo dev
+FROM node:20-alpine
 WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm ci || npm install
 COPY . .
-RUN npm run build
-
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 5173
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
